k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-confidence-service
  namespace: deploy-confidence
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy-confidence-service
  template:
    metadata:
      labels:
        app: deploy-confidence-service
    spec:
      serviceAccountName: deploy-confidence-sa
      containers:
        - name: deploy-confidence-service
          image: ghcr.io/anselem-okeke/deploy-confidence-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /live
              port: 8000
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /live
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
