k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploy-confidence-service
  namespace: deploy-confidence
spec:
  selector:
    app: deploy-confidence-service
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
